--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   "editor.guides.bracketPairs": true,
   "editor.tabSize": 4,
   "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: LLVM, IndentWidth: 4, ColumnLimit: 80}",
-  "cSpell.words": ["FILEHANDLER", "msvc", "SCREENLOGGER"],
+  "cSpell.words": ["FILEHANDLER", "msvc", "REQUESTHANDLER", "SCREENLOGGER"],
   "files.associations": {
     "*.rmd": "markdown",
     "xstring": "cpp",
