client app initial setup; example endpoint working on the Firebeetle

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
   "editor.tabSize": 4,
   "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: LLVM, IndentWidth: 4, ColumnLimit: 80}",
   "cSpell.words": ["FILEHANDLER", "msvc", "REQUESTHANDLER", "SCREENLOGGER"],
+  "workbench.iconTheme": "vscode-icons",
   "files.associations": {
     "*.rmd": "markdown",
     "xstring": "cpp",
