separated startup into its own module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,38 @@
   "editor.tabSize": 4,
   "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: LLVM, IndentWidth: 4, ColumnLimit: 80}",
   "cSpell.words": [
+    "asvetliakov",
+    "autoinstaller",
+    "camelcase",
+    "chrono",
+    "coenraad",
+    "dbaeumer",
+    "deque",
+    "eamodio",
+    "esbenp",
     "FILEHANDLER",
+    "formulahendry",
+    "gitlens",
+    "jpoissonnier",
+    "jvitor",
+    "kohler",
+    "msjsdiag",
     "msvc",
+    "ostream",
+    "pmmmwh",
+    "reduxjs",
     "REQUESTHANDLER",
     "SCREENLOGGER",
-    "USBCON"
+    "sourcemap",
+    "spaceflightnewsapi",
+    "streetsidesoftware",
+    "teamsupercell",
+    "USBCON",
+    "wojtekmaj",
+    "xhash",
+    "xstring",
+    "xtree",
+    "xutility"
   ],
   "workbench.iconTheme": "vscode-icons",
   "files.associations": {
