C:/Program Files/Git/capture endpoint PoC

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,22 +19,32 @@
     "FILEHANDLER",
     "formulahendry",
     "gitlens",
+    "GPIO",
     "jpoissonnier",
     "jvitor",
     "kohler",
     "msjsdiag",
     "msvc",
     "ostream",
+    "pclk",
+    "PIXFORMAT",
     "pmmmwh",
+    "PSRAM",
+    "pwdn",
     "reduxjs",
     "REQUESTHANDLER",
     "SCREENLOGGER",
+    "SIOD",
     "sourcemap",
     "spaceflightnewsapi",
+    "sscb",
     "streetsidesoftware",
     "teamsupercell",
     "USBCON",
+    "UXGA",
+    "vsync",
     "wojtekmaj",
+    "xclk",
     "xhash",
     "xstring",
     "xtree",
