--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
   "editor.tabSize": 4,
   "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: LLVM, IndentWidth: 4, ColumnLimit: 80}",
   "cSpell.words": [
+    "Adafruit",
     "asvetliakov",
     "autoinstaller",
     "camelcase",
@@ -30,10 +31,14 @@
     "PIXFORMAT",
     "pmmmwh",
     "PSRAM",
+    "pulselen",
     "pwdn",
     "reduxjs",
     "REQUESTHANDLER",
     "SCREENLOGGER",
+    "SERVOMAX",
+    "SERVOMIN",
+    "servonum",
     "SIOD",
     "sourcemap",
     "spaceflightnewsapi",
@@ -41,6 +46,8 @@
     "streetsidesoftware",
     "teamsupercell",
     "USBCON",
+    "USMAX",
+    "USMIN",
     "UXGA",
     "vsync",
     "wojtekmaj",
