--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ temp.*
 
 # env
 env.h
+
+# Platformio
+.pio
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
