--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,8 @@ board = dfrobot_firebeetle2_esp32s3
 framework = arduino
 upload_port = COM7
 monitor_speed = 115200
+monitor_rts = 0
+monitor_dtr = 0
 lib_ldf_mode = deep
 lib_deps = 
 	arducam/ArduCAM @ ^1.0.0
@@ -21,7 +23,10 @@ lib_deps =
 	bodmer/TFT_eSPI@^2.5.43
 	bblanchon/ArduinoJson@^7.2.1
 	adafruit/Adafruit PWM Servo Driver Library@^3.0.2
-    https://github.com/dattasaurabh82/DFRobot_GDL.git
+	https://github.com/dattasaurabh82/DFRobot_GDL.git
 	https://github.com/mathieucarbou/AsyncTCP.git
-build_flags = 
-	-std=c++17
+	adafruit/Adafruit GFX Library@^1.11.11
+	adafruit/Adafruit BusIO@^1.16.2
+
+build_flags =
+	-D _DEBUG
