--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,12 @@ lib_deps =
 	https://github.com/mathieucarbou/AsyncTCP.git
 	adafruit/Adafruit GFX Library@^1.11.11
 	adafruit/Adafruit BusIO@^1.16.2
-
 build_flags =
 	-D _DEBUG
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
+	-DCORE_DEBUG_LEVEL=3
+	-DARDUINO_USB_CDC_ON_BOOT=1
+	-DARDUINO_USB_MODE=1
+
+
