--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,11 @@
 [env:dfrobot_firebeetle2_esp32s3]
 platform = espressif32
 board = dfrobot_firebeetle2_esp32s3
+board_build.arduino.memory_type = qio_opi
+board_build.flash_mode = qio
+board_build.psram_type = opi
+board_upload.flash_size = 16MB
+board_upload.maximum_size = 16777216
 framework = arduino
 upload_port = COM7
 monitor_speed = 115200
@@ -30,7 +35,6 @@ lib_deps =
 build_flags =
 	-D _DEBUG
     -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
 	-DCORE_DEBUG_LEVEL=3
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-DARDUINO_USB_MODE=1
