spiffs partition expanded

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,8 @@ board_build.arduino.memory_type = qio_opi
 board_build.flash_mode = qio
 board_build.psram_type = opi
 board_upload.flash_size = 16MB
-board_build.partitions = partitions_custom_16MB.csv
-board_upload.maximum_size = 16777216
+board_build.partitions = partitions_custom_16MB.csv ; ~12.82MB for SPIFFS
+board_upload.maximum_size = 16777216 
 framework = arduino
 upload_port = COM7
 monitor_speed = 115200
