saving files to SPIFFS properly, increased upload_speed to the board, stopPlayback() randomly crashes the board

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,7 @@
     "unordered_set": "cpp",
     "string_view": "cpp",
     "set": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "new": "cpp"
   }
 }
