--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ board_build.partitions = partitions_custom_16MB.csv ; ~12.82MB for SPIFFS
 board_upload.maximum_size = 16777216 
 framework = arduino
 upload_port = COM7
+upload_speed = 921600
 monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 0
