--- a/bob-client/package.json
+++ b/bob-client/package.json
@@ -1,9 +1,9 @@
 {
   "name": "bob-client",
+  "version": "1.0.0",
   "author": "Piotr Piech <piotr@piech.dev>",
   "license": "MIT",
-  "description": "Client application for Bob the Bot",
-  "version": "1.0.0",
+  "description": "Client application for bob",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Tenemo/bob.git"
@@ -25,11 +25,13 @@
     "lint": "npm run eslint && npm run stylelint",
     "open:dist": "http-server dist --port 4000 --proxy http://localhost:4000?",
     "open:src": "cross-env PORT=3000 webpack serve --config config/webpack/webpack.dev.babel.ts",
+    "postinstall": "husky init",
     "tsc": "tsc",
     "test": "cross-env NODE_ENV=test jest",
     "test:update": "npm run test -- --update",
     "test:coverage": "npm run test -- --coverage",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "prepare": "husky"
   },
   "browserslist": [
     "> 0.5%",
@@ -43,6 +45,10 @@
   "type": "module",
   "dependencies": {
     "@babel/runtime-corejs3": "^7.26.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.8",
+    "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
     "@reduxjs/toolkit": "^2.3.0",
     "core-js": "^3.39.0",
     "date-fns": "^4.1.0",
@@ -76,28 +82,28 @@
     "@types/circular-dependency-plugin": "^5.0.8",
     "@types/core-js": "^2.5.8",
     "@types/eslint": "^9.6.1",
+    "@types/eslint__js": "^8.42.3",
     "@types/eslint-plugin-prettier": "^3.1.3",
-    "@types/history": "^4.7.11",
+    "@types/history": "^5.0.0",
     "@types/html-webpack-plugin": "^3.2.9",
     "@types/http-server": "^0.12.4",
     "@types/ip": "^1.1.3",
     "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.9.1",
     "@types/npm": "^7.19.3",
-    "@types/prettier": "^2.7.3",
+    "@types/prettier": "^3.0.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-redux": "^7.1.34",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.13",
-    "@types/redux-mock-store": "^1.0.6",
-    "@types/sass": "^1.43.1",
+    "@types/redux-mock-store": "^1.5.0",
+    "@types/sass": "^1.45.0",
     "@types/webpack-bundle-analyzer": "^4.7.0",
     "@types/webpack-env": "^1.18.5",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
@@ -106,7 +112,8 @@
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
-    "eslint": "^9.15.0",
+    "eslint": "9.14",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "28.9",
@@ -119,7 +126,7 @@
     "globals": "^15.12.0",
     "html-webpack-plugin": "^5.6.3",
     "http-server": "^14.1.1",
-    "husky": "^9.1.6",
+    "husky": "^9.1.7",
     "ip": "^2.0.1",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
@@ -143,13 +150,15 @@
     "stylelint": "^16.10.0",
     "stylelint-config-recommended": "^14.0.1",
     "stylelint-config-recommended-scss": "^14.1.0",
-    "stylelint-scss": "^6.9.0",
+    "stylelint-scss": "^6.10.0",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.15.0",
     "webpack": "^5.96.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
-    "webpack-merge": "^6.0.1"
+    "webpack-merge": "^6.0.1",
+    "whatwg-fetch": "^3.6.20"
   },
   "jest": {
     "collectCoverageFrom": [
