--- a/bob-client/package.json
+++ b/bob-client/package.json
@@ -53,6 +53,7 @@
     "core-js": "^3.39.0",
     "date-fns": "^4.1.0",
     "history": "^5.3.0",
+    "lucide-react": "^0.460.0",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
