--- a/bob-client/package.json
+++ b/bob-client/package.json
@@ -82,6 +82,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/circular-dependency-plugin": "^5.0.8",
     "@types/core-js": "^2.5.8",
+    "@types/dotenv-webpack": "^7.0.8",
     "@types/eslint": "^9.6.1",
     "@types/eslint__js": "^8.42.3",
     "@types/eslint-plugin-prettier": "^3.1.3",
@@ -113,6 +114,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "9.14",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
