--- a/bob-client/package.json
+++ b/bob-client/package.json
@@ -55,6 +55,7 @@
     "history": "^5.3.0",
     "lucide-react": "^0.460.0",
     "normalize.css": "^8.0.1",
+    "openai": "^4.73.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
