--- a/bob-client/package.json
+++ b/bob-client/package.json
@@ -127,6 +127,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "5.0.0",
     "globals": "^15.12.0",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "http-server": "^14.1.1",
     "husky": "^9.1.7",
@@ -146,6 +147,7 @@
     "react-refresh": "^0.14.2",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.5",
+    "remark-loader": "^6.0.0",
     "rimraf": "^6.0.1",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
