--- a/include/Env.h.sample
+++ b/include/Env.h.sample
@@ -3,5 +3,6 @@
 
 const char* WIFI_SSID = "WIFI_SSID";
 const char* WIFI_PASSWORD = "WIFI_PASSWORD";
+const char* OPENAI_API_KEY = "OPENAI_API_KEY";
 
 #endif
