--- a/bob-client/package.json
+++ b/bob-client/package.json
@@ -78,7 +78,6 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
@@ -116,6 +115,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
+    "css-modules-typescript-loader": "^4.0.1",
     "dotenv-webpack": "^8.1.0",
     "eslint": "9.14",
     "eslint-config-prettier": "^9.1.0",
@@ -142,7 +142,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-html": "^1.7.0",
     "postcss-loader": "^8.1.1",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
     "prettier-eslint": "^16.3.0",
     "prettier-stylelint": "^0.4.2",
     "react-refresh": "^0.14.2",
