--- a/bob-client/package.json
+++ b/bob-client/package.json
@@ -112,10 +112,12 @@
     "babel-loader": "^9.2.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "circular-dependency-plugin": "^5.2.2",
+    "copy-webpack-plugin": "^13.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "css-modules-typescript-loader": "^4.0.1",
+    "dotenv": "^16.4.7",
     "dotenv-webpack": "^8.1.0",
     "eslint": "9.14",
     "eslint-config-prettier": "^9.1.0",
