--- a/bob-server/package.json
+++ b/bob-server/package.json
@@ -16,39 +16,15 @@
         "node": ">=16.14"
     },
     "scripts": {
-        "start": "node dist/server.js",
-        "start:prod": "cross-env NODE_ENV=production PORT=80 node dist/server.js",
-        "prebuild": "npm run eslint:fix && npm run tsc && npm test && npm run cleanDist",
-        "build": "cross-env NODE_ENV=production babel --extensions '.ts' src --out-dir dist",
-        "build:skip": "npm run cleanDist && cross-env NODE_ENV=production babel --extensions '.ts' src --out-dir dist",
-        "cleanDist": "rimraf ./dist && mkdir dist",
         "nodemon": "nodemon",
         "dev:ts": "ts-node --transpile-only src/server.ts",
         "eslint": "eslint . --ext js,ts",
         "eslint:fix": "eslint . --ext js,ts --fix",
         "postinstall": "husky install",
-        "tsc": "tsc",
-        "test": "cross-env NODE_ENV=test jest --passWithNoTests",
-        "test:coverage": "npm run test -- --coverage",
-        "test:watch": "npm run test -- --watch"
+        "tsc": "tsc"
     },
     "dependencies": {
-        "@sinclair/typebox": "^0.32.20",
-        "axios": "^1.7.7",
-        "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
-        "cross-env": "^7.0.3",
-        "dotenv": "^16.4.5",
-        "env-schema": "^5.2.1",
-        "express": "^4.19.2",
-        "express-winston": "^4.2.0",
-        "http-errors": "^2.0.0",
-        "joi": "^17.12.2",
-        "morgan": "^1.10.0",
-        "parse-database-url": "^0.3.0",
-        "rimraf": "^5.0.5",
-        "winston": "^3.13.0",
-        "winston-daily-rotate-file": "^5.0.0"
+        "axios": "^1.7.7"
     },
     "devDependencies": {
         "@babel/cli": "^7.24.1",
@@ -56,17 +32,6 @@
         "@babel/node": "^7.23.9",
         "@babel/preset-env": "^7.24.3",
         "@babel/preset-typescript": "^7.24.1",
-        "@types/cookie-parser": "^1.4.7",
-        "@types/cors": "^2.8.17",
-        "@types/eslint": "^8.56.7",
-        "@types/eslint-plugin-prettier": "^3.1.3",
-        "@types/express": "^4.17.21",
-        "@types/http-errors": "^2.0.4",
-        "@types/jest": "^29.5.12",
-        "@types/morgan": "^1.9.9",
-        "@types/node": "^20.12.2",
-        "@types/npm": "^7.19.3",
-        "@types/prettier": "^2.7.3",
         "@typescript-eslint/eslint-plugin": "^7.4.0",
         "@typescript-eslint/parser": "^7.4.0",
         "babel-jest": "^29.7.0",
@@ -83,8 +48,6 @@
         "eslint-plugin-security": "^2.1.1",
         "eslint-plugin-sql": "^2.5.0",
         "husky": "^9.0.11",
-        "jest": "^29.7.0",
-        "jest-cli": "^29.7.0",
         "nodemon": "^3.1.0",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
